force-app/main/default/objects/Voice_User_Phone_Number__c/Voice_User_Phone_Number__c.object-meta.xml
<CustomObject>
    <description>Voice - User Phone Numbers - in place of re-utilizing the DID object of eFAX</description>
    <label>V: User Acct Phone Number</label>
    <nameField>
        <displayFormat>UPN-{00000000}</displayFormat>
        <label>Voice: User Phone Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>V: User Acct Phone Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>