force-app/main/default/objects/Voice_User_Phone_Number__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Voice - WCSA - User Level Account Association for Phone Numbers</description>
    <inlineHelpText>Voice - WCSA - User Level Account Association for Phone Numbers</inlineHelpText>
    <label>User Level Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Voice_User_Level_Acct_Phone_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>