force-app/main/default/objects/Voice_User_Phone_Number__c/fields/Business_Direct_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Direct_Line__c</fullName>
    <description>Voice - WCSA - User Phone Numbers</description>
    <inlineHelpText>Voice - WCSA - User Phone Numbers</inlineHelpText>
    <label>Business Direct Line</label>
    <type>Phone</type>
</CustomField>