force-app/main/default/objects/Voice_User_Phone_Number__c/fields/Company_s_Main_Line__c.field-meta.xml
<CustomField>
    <fullName>Company_s_Main_Line__c</fullName>
    <description>Voice - WCSA - User Phone Numbers</description>
    <inlineHelpText>Voice - WCSA - User Phone Numbers</inlineHelpText>
    <label>Company&apos;s Main Line</label>
    <type>Phone</type>
</CustomField>