force-app/main/default/objects/Voice_User_Phone_Number__c/fields/Home_Fax__c.field-meta.xml
<CustomField>
    <fullName>Home_Fax__c</fullName>
    <description>Voice - WCSA - User Phone Numbers</description>
    <inlineHelpText>Voice - WCSA - User Phone Numbers</inlineHelpText>
    <label>Home Fax</label>
    <type>Phone</type>
</CustomField>