force-app/main/default/objects/Voice_User_Phone_Number__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <description>Voice - WCSA - User Phone Numbers</description>
    <inlineHelpText>Voice - WCSA - User Phone Numbers</inlineHelpText>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>