force-app/main/default/objects/Voice_User_Phone_Number__c/fields/Pager__c.field-meta.xml
<CustomField>
    <fullName>Pager__c</fullName>
    <description>Voice - WCSA - User Phone Numbers</description>
    <inlineHelpText>Voice - WCSA - User Phone Numbers</inlineHelpText>
    <label>Pager</label>
    <type>Phone</type>
</CustomField>