force-app/main/default/objects/Voice_User_Phone_Number__c/fields/Phone_Description__c.field-meta.xml
<CustomField>
    <fullName>Phone_Description__c</fullName>
    <description>Voice - WCSA - User - Phone Number Description</description>
    <inlineHelpText>Voice - WCSA - User - Phone Number Description</inlineHelpText>
    <label>Phone Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Direct Line</fullName>
            </value>
            <value>
                <fullName>Business Fax</fullName>
            </value>
            <value>
                <fullName>Company&apos;s Main Line</fullName>
            </value>
            <value>
                <fullName>Home Fax</fullName>
            </value>
            <value>
                <fullName>Home Office</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>