force-app/main/default/objects/Voice_User_Phone_Number__c/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <description>Voice - WCSA - User Phone Number Extension</description>
    <inlineHelpText>Voice - WCSA - User Phone Number Extension</inlineHelpText>
    <label>Phone Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>