force-app/main/default/objects/Voice_User_Phone_Number__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Voice - WCSA - User - Phone Number</description>
    <externalId>true</externalId>
    <inlineHelpText>Voice - WCSA - User - Phone Number</inlineHelpText>
    <label>Phone Number</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>